--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <ul>
     <li><a href="/odata/v4/catalog">Catalog Service</a></li>
     <li><a href="/odata/v4/catalog/$metadata">Metadata</a></li>
-    <li><a href="/odata/v4/catalog/Books">Books</a></li>
+    <li><a href="/odata/v4/catalog/Books">Books!</a></li>
     <li><a href="/odata/v4/catalog/Authors">Authors</a></li>
   </ul>
 </body>
